# cpp_iz_2

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/include/: find_max_word.h
libs/shared/: CMakeLists.txt  parallel_find.c
libs/static/: CMakeLists.txt  common_find.c
test/: CMakeLists.txt
test/src/: test_1.cpp
